# starfield-toolkit

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
specs/001-starfield-tabbed-toolbox/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-creations-cache/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-load-order-sorting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-creations-grid-modes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-creations-catalogue/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-tes4-master-sort/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/forward_research/: 006-dependency-graph-findings.md  automated_download.md
src/: scrape_catalogue.py
src/bethesda_creations/: __init__.py  _api.py  _cache.py  _version_cmp.py  catalogue.py  client.py  models.py  rate_limiter.py
src/load_order_sorter/: __init__.py  loot_masterlist.py  models.py  pipeline.py  snapshot.py  tes4_parser.py  validation.py
src/starfield_tool/: app.py  (+10 more)
tests/: conftest.py  test_app.py  test_bethesda_creations.py  test_catalogue.py  test_config.py  test_creation_load_order.py  test_creations.py  test_load_order_sorter.py  test_models.py  test_parsers.py  test_rate_limiter.py  test_scrape_catalogue.py  test_steam.py  test_tes4_parser.py  test_tes4_sorter.py  test_tes4_validation.py  test_version_checker.py
(+24 files in other folders)
